--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<div class="infoText">My solution was to set up an array of rowspaned cell objects, each of which is initialize to <span class="hilite">FALSE</span>.</div>
 						<div class="infoText">When a rowspan is assigned, all affected cells in the span region are set to <span class="hilite">TRUE</span> in appropriate object in the rowspans array.</div>
 						<div class="infoText">This way, only table settings in the <span class="hilite">target row</span> needs to be checked for rowspans.</div>
-						<div class="infoText">Finally, since regions may span both columns and rows, both span types need to be checked in order to correct the 'target' column for regions to the right of the spanned region.</div>
+						<div class="infoText">Finally, since regions may span both columns and rows, both span types need to be checked in order to correct the <span class="hilite">'target' column</span> for regions to the right of the spanned region.</div>
 						<span class="spacer">&nbsp;</span>
 						</div>
 				</div>
