improved UI functions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 
 		<!-- ======= ======= ======= styles ======= ======= ======= -->
-		<title>newSite</title>
+		<title>Blackjack Explained]</title>
 		<meta name="description" content="">
 		<link rel="stylesheet" href="style.css" type="text/css">
 		<link href='https://fonts.googleapis.com/css?family=Limelight|Cabin+Sketch:400,700|Averia+Sans+Libre:400,700|Pompiere' rel='stylesheet' type='text/css'>
@@ -22,7 +22,7 @@
 
 			<!-- ======= ======= ======= grid column ======= ======= ======= -->
 			<div class="column column-5 grid-col">
-				<div id="logo" class="title">blackjack</div>
+				<div id="logo" class="title">blackjack - explained</div>
 
 				<!-- ======= ======= ======= content ======= ======= ======= -->
 				<div class="article">
@@ -49,10 +49,13 @@
 			</div>
 
 			<!-- ======= ======= ======= info column ======= ======= ======= -->
-			<div class="column column-3 info-column">
+			<div class="column column-4 info-column">
 
 				<!-- ======= ======= ======= content ======= ======= ======= -->
 				<img id="howIdidIt" src="images/howIdidIt.png" alt="howIdidIt">
+
+				<!-- ======= ======= ======= info hover ======= ======= ======= -->
+				<div id="info"><p>scroll below <span class='hilite'>slowly</span> for descriptions...</p></div>
 
 				<div id="scrollWindow">
 					<div id="scrollText">
@@ -75,11 +78,11 @@
 						<span class="spacer">&nbsp;</span>
 						</div>
 				</div>
-				<div id="info">&nbsp;</div>
-			</div>
-		</div>
 
-		<div class="column column-3">&nbsp;</div>
+			</div>
+
+		</div>
+		<div class="column column-2">&nbsp;</div>
 
 		<!-- ======= ======= ======= scripts ======= ======= ======= -->
 		<script type="text/javascript" src="scrollPlugin.js"></script>
