blackjack link bug fix

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<!-- ======= ======= ======= content ======= ======= ======= -->
 				<div class="article">
 					<p class="intro">
-						<span class="hilite">Blackjack</span> was my choice for our first javascript project at <span class="hilite">GA-DC WDI</span> last summer. You can see my <a href="https://github.com/tomBeach/_Project_1">original repo here</a>, but for the <a href="http://tombeach.github.io/blackjack5/">upgraded and refactored version</a> I wanted to try something different: a multi-player card-game on a grid. A quick coding test suggested the basic functionality would be fairly straight-forward:
+						<span class="hilite">Blackjack</span> was my choice for our first javascript project at <span class="hilite">GA-DC WDI</span> last summer. You can see my <a href="https://github.com/tomBeach/_Project_1">original repo here</a>, but for the <a href="http://tombeach.github.io/blackjack/">upgraded and refactored version</a> I wanted to try something different: a multi-player card-game on a grid. A quick coding test suggested the basic functionality would be fairly straight-forward:
 					</p>
 					<ul class="introList">
 						<li>make a 12 by 18 table of cells</li>
