--- a/index.html
+++ b/index.html
@@ -27,17 +27,10 @@
 				<!-- ======= ======= ======= content ======= ======= ======= -->
 				<div class="article">
 					<p class="intro">
-						<span class="hilite">Blackjack</span> was my choice for our first javascript project at <span class="hilite">GA-DC WDI</span> last summer. You can see my <a href="https://github.com/tomBeach/_Project_1">original repo here</a>, but for the <a href="http://tombeach.github.io/blackjack/">upgraded and refactored version</a> I wanted to try something different: a multi-player card-game on a grid. A quick coding test suggested the basic functionality would be fairly straight-forward:
+						<span class="hilite">Blackjack</span> was an early javascript project at General Assembly's <span class="hilite">WDI</span> immersion course, but for an alternative approach I wanted to try something different: a multi-player <a href="http://tombeach.github.io/blackjack/">card-game on a grid</a>.
 					</p>
-					<ul class="introList">
-						<li>make a 12 by 18 table of cells</li>
-						<li>select them individually or in groups</li>
-						<li>apply classes and other attributes at will</li>
-						<li>append images or divs to create layers or features above the grid</li>
-						<li>store parameters and behaviors in screen, player, display and game objects</li>
-					</ul>
 					<p class="intro">
-						Things got a litle crazy once I encountered rowspans.  Here's a brief look at the issue...
+						There were some interesting javascript challenges along the way.  Here's a brief look at the approach...
 					</p>
 				</div>
 				<div id="section-title" class="title">design</div>
